5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1692_1879.log
== SUBMITION (2019-05-01 22:17:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * (faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.209269
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 475.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 389.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:17:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * (faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:21:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.117083
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 465.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 379.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:22:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.242672
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 465.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 379.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:24:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/5 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 916.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:24:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.273769
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 475.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 389.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:27:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/6 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 916.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:27:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/2 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 910.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:28:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/3 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+100
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.200511
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 913.33
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 467.17
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 385.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:43:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= (extras - 1/4) * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 8895.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:43:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:44:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - 1/4 * faltas
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
-- EXECUTION TIME:
0.147203
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 465.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 379.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:19:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - (1/4 * faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
	
	

-- EXECUTION TIME:
0.126779
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 465.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 379.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:19:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - (1/4 * faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
	
	
	

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:19:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - (1/4 * faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	G= h + 500
	print("R$",round(G, 2))
elif (h<=400):
	G= h+90
	print("R$",round(G, 2))
	
	
	

-- EXECUTION TIME:
0.19241
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 915.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 465.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 379.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:20:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - (1/4 * faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	h= x-(1/4*y)
print(x, "extras e", y, "de falta")
if(h>400):
	print("R$ 500.0")
elif(h<=400):
	print("R$ 100.0")
	
	

-- EXECUTION TIME:
0.142505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1879/main.py", line 7, in <module>
    h= x-(1/4*y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:23:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
extras=float(input("numero de horas extras: "))
faltas=float(input("numero de horas faltadas: "))
h= extras - (1/4 * faltas)
print(extras, "extras e", faltas, "de falta")
if (h>400):
	print("R$ 500.0")
elif (h<=400):
	print("R$ 100.0")
	
	

-- EXECUTION TIME:
0.154941
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
